# event-based

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5475412  CMakeLists.txt.user.712879b  README.md  main.cpp
Report/: report.aux  report.bbl  report.blg  report.out  report.tex  report.toc  report_flymake.aux  report_flymake.out  report_flymake.toc
Report/auto/: report.el
Report/bibliography/: references.bib
Report/chapters/: _region_.tex  abstract.tex  appendix_text.tex  chapter.tex  declaration.tex  introduction.tex  symbols.tex
Report/chapters/auto/: chapter.el
Report/images/: boxes_6dof_rotation_.fig  pipeline.pptx  shapes_6dof_rotation_33.fig  shapes_6dof_translation_33.fig  shapes_tr_lost.fig
Report/matlab/: rotation.m  stream.m  stream.m~  translation.m
Report/report.prv/tmp4594-7y/: preview.dsc
cmake/: Findokvis.cmake
config/: config_fpga_p2_euroc.yaml
include/: Converter.cc  Converter.h  Frame.cc  Frame.h  KeyFrame.cc  KeyFrame.h  Map.cc  Map.h  MapDrawer.cc  MapDrawer.h  MapOptimizer.cc  MapPoint.cc  MapPoint.h  Optimizer.cc  Optimizer.h  OptimizerFrame.cc  Shader.cc  Shader.h  ThreadedEventIMU.h  Tracking.cc  Tracking.h
include/okvis/: Duration.cc  Duration.h  Measurements.h  ThreadsafeQueue.h  Time.cc  Time.h
include/okvis/implementation/: Duration.h  Time.h
include/util/: 0060-3582.avi  blender_trajectory_viz.py  tomovie.sh  tovideo.sh  utils.cc  utils.cpp  utils.h
shaders/: compare.fsh  contrast.fsh  event.fsh  event.gsh  event.vsh  gaussian_blur.fsh  map_texture.fsh  map_texture.vsh  patch.fsh  patch.vsh  screen.fsh  screen.vsh  shader.fsh  shader.glsl  shader.vsh  square.vsh  summation.fsh  summation.vsh
src/: ._Frontend.cpp  ._Frontend.h  ._parameters.h  Converter.cc  Frontend.cc  Frontend.cpp  Frontend.h  MapPoint.cc  Optimizer.cc  ThreadedEventIMU.cc  ThreadedEventIMU.cpp  ThreadedEventIMU.h  Tracking.cc  event.cpp  event.h  parameters.h
